--- a/style.css
+++ b/style.css
@@ -1,180 +1,3 @@
-@font-face {
-  font-family: 'Cabin';
-  src: url("assets/fonts/Cabin/Cabin-VariableFont_wdth,wght.ttf");
-  font-weight: 400;
-}
-
-@media (max-width: 768px) {
-.section {
-  width: 100%;
-}
-}
-
-
 html {
-scroll-behavior: smooth; 
+  color: red;
 }
-
-body {
-font-family: 'Cabin';
-min-height: 100vh;
-margin: 0;
-padding: 0;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-background-color: #dae0e2;
-}
-
-p {
-margin: 30px;
-line-height: 30px;
-}
-
-li {
-line-height: 30px;
-}
-
-.container {
-max-width: 1028px;
-margin: 0 auto;
-}
-
-.nav-list {
-display: flex;
-justify-content: flex-end;
-align-items: center;
-list-style: none;
-}
-
-.nav-link {
-padding: 0 20px;
-line-height: 50px;
-font-size: 14px;
-font-weight: bold;
-color: #909090;
-text-decoration: none;  
-transition: 0.2s;
-}
-
-:hover.nav-link {
-color: #000000;
-font-weight: bold;
-}
-
-.link {
-line-height: 30px;
-font-size: 18px;
-color: #3d3d3d;
-text-decoration: none;  
-transition: 0.2s;
-}
-
-:hover.link {
-color: #fa7000;
-font-weight: bold;
-}
-
-.link-white {
-color: #ffffff;
-}
-
-.main {
-font-size: 18px;
-max-width: 1028px;
-margin: auto;
-border: black solid 1px;
-display: flex;
-background-color: white;
--webkit-box-shadow: 1px 81px 100px 5px rgb(0 0 0 / 49%);
--moz-box-shadow: 1px 81px 100px 5px rgba(0,0,0,0.49);
-box-shadow: 2px 100px 100px 7px rgb(0 0 0 / 28%);
-}
-
-.avatar {
-width: 80%;
-object-fit: cover;
-border-radius: 69%;
-box-shadow: 0 2px 5px rgb(0 0 0);
-align-items: center;
-margin: 0 auto;
-display: flex;
-justify-content: space-between;
-};
-  
-
-.experience-link {
-padding: 0 20px;
-line-height: 20px;
-font-size: 16px;
-font-weight: bold;
-color: #323232;
-text-decoration: none;  
-transition: 0.2s;
-}
-
-:hover.experience-link {
-color: #000000;
-font-weight: bold;
-}
-
-.main-container {
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-justify-content: space-evenly;
-align-content: stretch;
-}
-
-.footer {
-margin: 0 auto;
-width: 1028px;
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-justify-content: space-around;
-align-items: center;
-align-content: stretch;     
-}
-
-.github-icon {
-max-height: 80px;
-filter: invert(30%);
-transition: .3s;
-}
-
-:hover.github-icon {
-filter: invert(0%);
-}
-
-.rss-icon {
-height: 140px;
-width: 140px;
-filter: invert(30%);
-transition: .3s;
-}
-
-:hover.rss-icon {
-filter: invert(0%);
-}
-
-.about {
-padding: 1rem;
-width: 30%;
-color: white;
-background-color: #4d4d4d;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: stretch;
-}
-
-.about-me {
-padding: 1rem;
-width: 68%;
-color: #4d4d4d;
-background-color: white;
-}
-
-
-
